# friendly-lamp

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: index.tsx
src/components/Button/: index.tsx  style.module.css
src/components/Input/: index.tsx  style.module.css
src/components/Link/: index.tsx  style.module.css
src/contexts/: imageList.tsx
src/contexts/phantomWallet/: index.tsx  types.ts
src/features/App/: footer.tsx  header.tsx  index.tsx  inputContainer.tsx  style.module.css
src/features/ImageGrid/: index.tsx  style.module.css
src/utils/: hash.ts
