[package]
name = "friendly_lamp"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
solana-program = "1.11.5"
thiserror = "1.0.32"

[dev-dependencies]
solana-sdk = "1.11.5"

[lib]
name = "friendly_lamp"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
